cabal-version:      2.2
name:               detsys-debugger
version:            0.0.0
synopsis:           Debugger
description:
  See README at <https://github.com/symbiont-io/detsys-testkit/tree/main/src/new-debugger#readme>

bug-reports:        https://github.com/symbiont-io/detsys-testkit/issues
license:            MIT
license-file:       LICENSE
author:             Stevan Andjelkovic, Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com
copyright:          Copyright (c) 2021-2022 Symbiont Inc
category:           Testing, Distributed Systems
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.4

library
  hs-source-dirs:   src/
  exposed-modules:
    Debugger.AnsiEscape
    Debugger.Main
    Debugger.State
    Debugger.UI

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , aeson
    , base        ^>=4.14
    , brick
    , text
    , vector
    , word-wrap
    , vty

  ghc-options:      -O2 -Wall
  default-language: Haskell2010

executable debugger
  hs-source-dirs:   app/debugger
  main-is:          Main.hs
  build-depends:
    , base
    , detsys-debugger

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010