cabal-version:      2.2
name:               stunt-double
version:            0.0.0
synopsis:           Actors that can be faked.
description:
  See README at <https://github.com/symbiont-io/detsys-testkit/tree/main/src/runtime-prototype#readme>

bug-reports:        https://github.com/symbiont-io/detsys-testkit/issues
license:
license-file:       LICENSE
author:             Stevan Andjelkovic, Daniel Gustafsson
maintainer:         symbiont-stevan-andjelkovic@users.noreply.github.com
copyright:          Copyright (c) 2021 Symbiont Inc
category:           Testing, Distributed Systems
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.10.4

library
  hs-source-dirs:   src/
  exposed-modules:
    Debugger
    Scheduler
    Scheduler.Agenda
    Scheduler.Event
    Scheduler.Executor
    Scheduler.Fault
    Scheduler.Faults
    Scheduler.Main
    Scheduler.State
    StuntDouble
    StuntDouble.ActorMap
    StuntDouble.AdminTransport
    StuntDouble.AdminTransport.NamedPipe
    StuntDouble.Codec
    StuntDouble.Envelope
    StuntDouble.FreeMonad
    StuntDouble.Frontend.Http
    StuntDouble.Histogram
    StuntDouble.Histogram.SingleProducer
    StuntDouble.IO
    StuntDouble.Log
    StuntDouble.LogicalTime
    StuntDouble.Message
    StuntDouble.Metrics
    StuntDouble.Queue
    StuntDouble.Random
    StuntDouble.Reference
    StuntDouble.Supervisor
    StuntDouble.Time
    StuntDouble.Transport
    StuntDouble.Transport.Http
    StuntDouble.Transport.HttpSync
    StuntDouble.Transport.NamedPipe
    StuntDouble.Transport.NamedPipeCodec
    StuntDouble.Transport.Stm

  -- GHC boot library dependencies:
  -- (https://gitlab.haskell.org/ghc/ghc/-/blob/master/packages)
  build-depends:
    , base        ^>=4.14
    , containers
    , directory
    , filepath
    , mtl
    , stm
    , text
    , time
    , unix

  build-depends:
    , aeson
    , async
    , atomic-primops
    , brick
    , bytestring
    , direct-sqlite
    , ghc-prim
    , hashable
    , heaps
    , http-client
    , http-types
    , primitive
    , random
    , sqlite-simple
    , unboxed-ref
    , unordered-containers
    , vector
    , vty
    , wai
    , warp
    , word-wrap

  ghc-options:      -O2
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Main.hs
  build-depends:
    , async
    , base
    , containers
    , http-client
    , HUnit
    , QuickCheck
    , stunt-double
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text

  other-modules:
    StuntDouble.ActorMapTest
    StuntDouble.FrontendTest
    StuntDouble.Histogram.SingleProducerTest
    StuntDouble.HistogramTest
    StuntDouble.QueueTest
    StuntDouble.Transport.HttpTest
    StuntDouble.Transport.NamedPipeTest
    StuntDouble.Transport.StmTest
    TastyDiscover

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  default-language: Haskell2010

executable scheduler
  hs-source-dirs:   app/scheduler
  main-is:          Main.hs
  build-depends:
    , base
    , stunt-double

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable debugger
  hs-source-dirs:   app/debugger
  main-is:          Main.hs
  build-depends:
    , base
    , stunt-double

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/
  main-is:          Main.hs
  build-depends:
    , async
    , atomic-primops
    , base
    , http-client
    , stm
    , stunt-double
    , time

  default-language: Haskell2010

benchmark bench-http
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench/http
  main-is:          Main.hs
  build-depends:
    , async
    , atomic-primops
    , base
    , bytestring
    , http-client
    , http-types
    , network
    , stm
    , time
    , wai
    , warp

  default-language: Haskell2010