load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "db.go",
        "debug.go",
        "generator.go",
        "root.go",
        "scheduler.go",
        "versions.go",
    ],
    importpath = "github.com/symbiont-io/detsys-testkit/src/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cli/vendor/github.com/spf13/cobra",
        "//src/cli/vendor/github.com/symbiont-io/detsys-testkit/src/lib",
    ],
)
