load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "db.go",
        "debug.go",
        "generator.go",
        "logger.go",
        "root.go",
        "scheduler.go",
        "utils.go",
        "versions.go",
    ],
    importpath = "github.com/symbiont-io/detsys-testkit/src/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/lib",
        "@com_github_spf13_cobra//:cobra",
    ],
)
