load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = ["debugger.go"],
    importpath = "github.com/symbiont-io/detsys-testkit/src/debugger/internal",
    visibility = ["//src/debugger:__subpackages__"],
    deps = [
        "//src/debugger/vendor/github.com/evanphx/json-patch",
        "//src/debugger/vendor/github.com/mattn/go-sqlite3",
        "//src/debugger/vendor/github.com/nsf/jsondiff",
        "//src/debugger/vendor/github.com/symbiont-io/detsys-testkit/src/lib",
    ],
)

go_test(
    name = "internal_test",
    srcs = ["debugger_test.go"],
    embed = [":internal"],
    deps = ["//src/debugger/vendor/github.com/symbiont-io/detsys-testkit/src/lib"],
)
