load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "broadcast",
    srcs = [
        "broadcast.go",
        "marshaler.go",
    ],
    importpath = "github.com/symbiont-io/detsys-testkit/src/sut/broadcast",
    visibility = ["//visibility:public"],
    deps = ["//src/lib"],
)

go_test(
    name = "broadcast_test",
    srcs = ["broadcast_test.go"],
    embed = [":broadcast"],
    gotags = ["json1"],
    deps = [
        "//src/executor",
        "//src/lib",
    ],
)
