cabal-version:      2.4
name:               dumblog
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:
license-file:       LICENSE
author:             Daniel Gustafsson, Stevan Andjelkovic
maintainer:
  daniel.gustafsson@symbiont.io,
  symbiont-stevan-andjelkovic@users.noreply.github.com

copyright:          Copyright (c) 2021-2022 Symbiont Inc

-- category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  build-depends:
    , async
    , base           ^>=4.14.1.0
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , http-client
    , http-types
    , journal
    , network
    , sqlite-simple
    , persistent
    , persistent-sqlite
    , stm
    , text
    , time
    , wai
    , warp

  exposed-modules:
    Dumblog.Common.HttpClient
    Dumblog.Journal.Blocker
    Dumblog.Journal.Codec
    Dumblog.Journal.FrontEnd
    Dumblog.Journal.Main
    Dumblog.Journal.Metrics
    Dumblog.Journal.Snapshot
    Dumblog.Journal.StateMachine
    Dumblog.Journal.Types
    Dumblog.Journal.Worker
    Dumblog.SQLite.Command
    Dumblog.SQLite.DB
    Dumblog.SQLite.DBPersistent
    Dumblog.SQLite.FrontEnd
    Dumblog.SQLite.Main
    Dumblog.SQLite.Worker
    Dumblog.ZeroCopy.HttpServer
    Dumblog.ZeroCopy.Main

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O2

common executable-common
  build-depends:
    , base
    , dumblog

  default-language: Haskell2010
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N

executable dumblog-journal
  import:         executable-common
  build-depends:
    , async
    , directory
    , journal

  hs-source-dirs: app/journal
  main-is:        Main.hs

executable dumblog-sqlite
  import:         executable-common
  hs-source-dirs: app/sqlite
  main-is:        Main.hs

executable dumblog-zero-copy
  import:         executable-common
  hs-source-dirs: app/zero-copy
  main-is:        Main.hs

common bench-common
  hs-source-dirs:   bench
  build-depends:
    , async
    , base
    , bytestring
    , directory
    , dumblog
    , random
    , time

  other-modules:    Common

  -- Some of these options are taking from:
  --   https://wiki.haskell.org/Performance/GHC#Use_optimisation
  -- XXX: try with -fllvm

  -- To inspect core:
  -- -fforce-recomp
  -- -ddump-simpl
  -- -dsuppress-all
  -- -ddump-to-file
  --
  -- To produce event log:
  -- -threaded -eventlog -rtsopts -with-rtsopts=-N
  ghc-options:
    -O2 -fproc-alignment=64 -fexcess-precision -fasm -optc-O3
    -optc-ffast-math -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

benchmark bench-journal
  import:         bench-common
  hs-source-dirs: bench/journal
  main-is:        Main.hs
  type:           exitcode-stdio-1.0

benchmark bench-sqlite
  import:         bench-common
  hs-source-dirs: bench/sqlite
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
